deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2016-09-12T04:28:20Z
  generation: 2
  labels:
    kubernetes-admin.caicloud.io/type: application
  name: template-test
  namespace: danieltmp
  resourceVersion: "27068056"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/template-test
  uid: 56008a65-78a1-11e6-bdf8-5254c020463d
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes-admin.caicloud.io/application: template-test
      kubernetes-admin.caicloud.io/type: application
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        kubernetes-admin.caicloud.io/application: template-test
        kubernetes-admin.caicloud.io/type: application
    spec:
      containers:
      - command:
        image: index.caicloud.io/caicloud/cpuload
        imagePullPolicy: Always
        name: pod-c1
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
