svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2016-09-12T04:28:20Z
  labels:
    kubernetes-admin.caicloud.io/type: application
  name: template-test
  namespace: danieltmp
  resourceVersion: "26658313"
  selfLink: /api/v1/namespaces/default/services/template-test
  uid: 55c78547-78a1-11e6-bdf8-5254c020463d
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 31991
  selector:
    kubernetes-admin.caicloud.io/application: template-test
    kubernetes-admin.caicloud.io/type: application
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
