ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/rewrite-target: /
  name: test
  namespace: danieltmp
spec:
  rules:
  - host: cpuload.skydns.local
    http:
      paths:
      - backend:
          serviceName: template-test
          servicePort: 8080 
        path: /
